@@ -1,3 +1,7 @@
+2008-08-27  Gerd Kohlberger  <gerdk@svn.gnome.org>
+
+	* src/mt-timer.c: Minor cleanup.
+
 2008-08-24  Gerd Kohlberger  <gerdk@svn.gnome.org>
 
 	* src/mt-listener.c: I_() macro was a bad idea.
